k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: emp-system
  labels:
    app: emp
    stage: base
