k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emp-app-service
  namespace: emp-system
spec:
  selector:
    app: emp-app
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: http
  type: ClusterIP
